# nvdiffrast

./: BUILD_README.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  run_sample.sh  setup.py
.github/workflows/: build-nvdiffrast-windows.yml  build_binary_wheel.yml
csrc/common/: antialias.cu  antialias.h  common.cpp  common.h  framework.h  interpolate.h  rasterize.cu  rasterize.h  texture.cpp  texture.h
csrc/common/cudaraster/: CudaRaster.hpp
csrc/torch/: torch_antialias.cpp  torch_bindings.cpp  torch_common.inl  torch_texture.cpp  torch_types.h
docker/: Dockerfile
docs/: index.html
nvdiffrast/: __init__.py
nvdiffrast/common/: antialias.cu  antialias.h  common.h  framework.h  glutil.cpp  glutil.h  glutil.inl  glutil_extlist.h  interpolate.cu  rasterize.cpp  rasterize.cu  rasterize.h  rasterize_gl.cpp  rasterize_gl.h  texture.cpp  texture.cu  texture.h
nvdiffrast/common/cudaraster/: CudaRaster.hpp
nvdiffrast/lib/: setgpu.lib
nvdiffrast/tensorflow/: __init__.py  ops.py  plugin_loader.py  tf_all.cu  tf_antialias.cu  tf_interpolate.cu  tf_rasterize.cu  tf_texture.cu
nvdiffrast/torch/: __init__.py  ops.py  torch_antialias.cpp  torch_bindings.cpp  torch_bindings_gl.cpp  torch_common.inl  torch_interpolate.cpp  torch_rasterize.cpp  torch_rasterize_gl.cpp  torch_texture.cpp  torch_types.h
samples/data/: NOTICE.txt  cube_c.npz  cube_d.npz  cube_p.npz  envphong.npz
samples/tensorflow/: cube.py  earth.py  envphong.py  pose.py  triangle.py  util.py
samples/torch/: cube.py  earth.py  envphong.py  pose.py  triangle.py  util.py
(+20 files in other folders)
